--- a/Assignment 2 Problem 4.ipynb
+++ b/Assignment 2 Problem 4.ipynb
@@ -208,7 +208,7 @@
     "X = data.drop(\"quality\", axis=1).values\n",
     "y = data[\"quality\"].values\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "X_train_big, X_test, y_train_big, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42\n",
     ")\n"
    ]
@@ -236,13 +236,13 @@
     }
    ],
    "source": [
-    "ones = np.ones((X_train.shape[0], 1))\n",
-    "X_train_aug = np.hstack([ones, X_train])\n",
+    "ones = np.ones((X_train_big.shape[0], 1))\n",
+    "X_train_aug = np.hstack([ones, X_train_big])\n",
     "# Compute (X^T X)\n",
     "XTX = X_train_aug.T @ X_train_aug\n",
     "\n",
     "# Compute (X^T y)\n",
-    "XTy = X_train_aug.T @ y_train\n",
+    "XTy = X_train_aug.T @ y_train_big\n",
     "\n",
     "# Solve for w\n",
     "w_closed_form = np.linalg.solve(XTX, XTy)\n",
@@ -277,13 +277,13 @@
     "\n",
     "# Scatter plot: Actual vs Predicted\n",
     "plt.figure(figsize=(6, 6))\n",
-    "plt.scatter(y_train, y_train_pred, alpha=0.6)\n",
+    "plt.scatter(y_train_big, y_train_pred, alpha=0.6)\n",
     "plt.xlabel(\"Actual Quality\")\n",
     "plt.ylabel(\"Predicted Quality\")\n",
     "plt.title(\"Actual vs Predicted Quality (Train Set)\")\n",
     "\n",
     "# Plot y = x reference line\n",
-    "plt.plot([y_train.min(), y_train.max()], [y_train.min(), y_train.max()], 'r--')\n",
+    "plt.plot([y_train_big.min(), y_train_big.max()], [y_train_big.min(), y_train_big.max()], 'r--')\n",
     "plt.grid(True)\n",
     "plt.show()\n"
    ]
@@ -318,7 +318,7 @@
     "X_test_aug  = np.hstack([np.ones((X_test.shape[0], 1)),  X_test])\n",
     "y_test_pred  = X_test_aug  @ w_closed_form\n",
     "\n",
-    "train_rmse = rmse(y_train, y_train_pred)\n",
+    "train_rmse = rmse(y_train_big, y_train_pred)\n",
     "test_rmse  = rmse(y_test,  y_test_pred)\n",
     "\n",
     "print(\"Train RMSE:\", train_rmse)\n",
@@ -347,22 +347,18 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
+    "X_scaled = scaler.fit_transform(X_train_big)\n",
+    "X_test_scaled = scaler.transform(X_test) \n",
     "\n",
-    "# Split full data into temp (90%) and test (10%)\n",
-    "X_temp, X_test, y_temp, y_test = train_test_split(\n",
-    "    X_scaled, y, test_size=0.10, random_state=42\n",
-    ")\n",
-    "\n",
-    "# Split temp (90%) into train (75%) and val (15%)\n",
+    "# Split test set into train (75%) and val (25%)\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    X_temp, y_temp, test_size=1/6, random_state=42\n",
+    "    X_scaled, y_train_big, test_size=0.25, random_state=42\n",
     ")\n",
     "\n",
     "# 4. Add intercept terms (manually)\n",
     "X_train_aug = np.hstack([np.ones((X_train.shape[0], 1)), X_train])\n",
     "X_val_aug   = np.hstack([np.ones((X_val.shape[0], 1)),   X_val])\n",
-    "X_test_aug  = np.hstack([np.ones((X_test.shape[0], 1)),  X_test])"
+    "X_test_aug  = np.hstack([np.ones((X_test_scaled.shape[0], 1)),  X_test_scaled])"
    ]
   },
   {
@@ -412,39 +408,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "η = 1e-05 → Validation RMSE = 0.6295\n",
-      "η = 3e-05 → Validation RMSE = 0.6019\n",
-      "η = 1e-04 → Validation RMSE = 0.6016\n",
-      "η = 3e-04 → Validation RMSE = 0.6016\n",
-      "η = 5e-04 → Validation RMSE = 0.6016\n",
-      "η = 6e-04 → Validation RMSE = 6156319045121166661010775686980810125100887094195520369674898295198996832069020981133312.0000\n",
-      "η = 7e-04 → Validation RMSE = inf\n",
-      "η = 1e-03 → Validation RMSE = nan\n",
-      "η = 3e-03 → Validation RMSE = nan\n",
+      "η = 1e-07 → Validation RMSE = 5.5947\n",
+      "η = 1e-06 → Validation RMSE = 2.6704\n",
+      "η = 7e-06 → Validation RMSE = 0.6656\n",
+      "η = 8e-06 → Validation RMSE = 0.6628\n",
+      "η = 9e-06 → Validation RMSE = 0.7050\n",
+      "η = 1e-05 → Validation RMSE = 0.7282\n",
+      "η = 2e-05 → Validation RMSE = 0.6780\n",
+      "η = 3e-05 → Validation RMSE = 0.6753\n",
+      "η = 5e-05 → Validation RMSE = 0.6733\n",
+      "η = 7e-05 → Validation RMSE = 0.6738\n",
+      "η = 1e-04 → Validation RMSE = 0.6743\n",
+      "η = 5e-04 → Validation RMSE = 0.6743\n",
+      "η = 7e-04 → Validation RMSE = 246665733671059678612274291354785933261296207800348125954048.0000\n",
       "\n",
-      " Best η selected: 0.0001 with validation RMSE = 0.6016\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/numpy/core/_methods.py:118: RuntimeWarning: overflow encountered in reduce\n",
-      "  ret = umr_sum(arr, axis, dtype, out, keepdims, where=where)\n",
-      "/var/folders/xr/m551d0ds2399b7q4w_r7m08w0000gn/T/ipykernel_58072/2679899615.py:10: RuntimeWarning: overflow encountered in square\n",
-      "  loss = 0.5 * np.mean((y_pred - y)**2)  # track MSE\n",
-      "/var/folders/xr/m551d0ds2399b7q4w_r7m08w0000gn/T/ipykernel_58072/692983333.py:3: RuntimeWarning: overflow encountered in square\n",
-      "  return np.sqrt(np.mean((y_true - y_pred) ** 2))\n",
-      "/var/folders/xr/m551d0ds2399b7q4w_r7m08w0000gn/T/ipykernel_58072/2679899615.py:7: RuntimeWarning: overflow encountered in matmul\n",
-      "  gradient = X.T @ (y_pred - y)          # gradient\n",
-      "/var/folders/xr/m551d0ds2399b7q4w_r7m08w0000gn/T/ipykernel_58072/2679899615.py:6: RuntimeWarning: invalid value encountered in matmul\n",
-      "  y_pred = X @ w                         # prediction\n"
+      " Best η selected: 8e-06 with validation RMSE = 0.6628\n"
      ]
     }
    ],
    "source": [
     "# Define candidate sets\n",
-    "etas = [1e-5, 3e-5, 1e-4, 3e-4, 5e-4, 6e-4, 7e-4, 1e-3, 3e-3]\n",
+    "etas = [1e-7, 1e-6, 7e-6, 8e-6, 9e-6, 1e-5, 2e-5, 3e-5, 5e-5, 7e-5, 1e-4, 5e-4, 7e-4]\n",
     "\n",
     "# Randomly initialize w^0\n",
     "np.random.seed(42) \n",
@@ -476,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Therefore, we should choose $\\eta=0.0001$, which leads to Validation RMSE = 0.6016."
+    "Therefore, we should choose $\\eta=8\\times 10^{-6}$, which leads to Validation RMSE = 0.6628."
    ]
   },
   {
@@ -504,7 +488,7 @@
     "w_init_final = np.random.randn(X_full_train_aug.shape[1])\n",
     "\n",
     "# Train LMS using selected eta and full training data\n",
-    "best_eta = 0.0001 \n",
+    "best_eta = 8e-6\n",
     "w_final, loss_history = lms_gradient_descent(\n",
     "    X_full_train_aug, y_full_train, w_init_final, best_eta, max_iter=1000\n",
     ")\n"
@@ -526,14 +510,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train RMSE: 0.6486\n",
-      "Test  RMSE: 0.6194\n"
+      "Train RMSE: 0.6667\n",
+      "Test  RMSE: 0.6480\n"
      ]
     }
    ],
    "source": [
     "# Augment X_test with intercept term\n",
-    "X_test_aug = np.hstack([np.ones((X_test.shape[0], 1)), X_test])\n",
+    "X_test_aug = np.hstack([np.ones((X_test_scaled.shape[0], 1)), X_test_scaled])\n",
     "\n",
     "def rmse(y_true, y_pred):\n",
     "    return np.sqrt(np.mean((y_true - y_pred) ** 2))\n",
@@ -554,9 +538,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After training the final LMS model on the full training set using $\\eta=0.0001$, we evaluated the RMSE on both the training and test sets. The results are \n",
+    "After training the final LMS model on the full training set using $\\eta=8\\times 10^{-6}$, we evaluated the RMSE on both the training and test sets. The results are \n",
     "\n",
-    "Train RMSE: 0.6486 and Test  RMSE: 0.6194."
+    "Train RMSE: 0.6667 and Test  RMSE: 0.6480."
    ]
   }
  ],
